@@ -31,6 +31,9 @@ Version 0.7.5 UNRELEASED
   * [cmdline] Notify of 'Download Only' mode before confirmation to continue,
     with verbose>0 (Closes: #804287)
 
+  * [cmdline] When simulating do not prompt for removal of essential packages
+    (Closes: #613049)
+
 - User visible changes:
 
   * [cmdline] Minor improvements to help (Closes: #497136)
